[tool.poetry]
name = "sam2"
version = "1.0.0"
description = "SAM 2: Segment Anything in Images and Videos"
authors = ["Meta AI <segment-anything@meta.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/facebookresearch/segment-anything-2"
repository = "https://github.com/facebookresearch/segment-anything-2"
packages = [{ include = "sam2" }]
keywords = ["segment-anything", "segmentation", "video", "image", "meta", "real-time"]
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = ">=2.3.1"
torchvision = ">=0.18.1"
numpy = ">=1.24.4"
tqdm = ">=4.66.1"
hydra-core = ">=1.3.2"
iopath = ">=0.1.10"
pillow = ">=9.4.0"

[tool.poetry.extras]
demo = ["matplotlib>=3.9.1", "jupyter>=1.0.0", "opencv-python>=4.7.0"]
dev = ["black==24.2.0", "usort==1.0.2", "ufmt==2.0.0b2"]

[build-system]
requires = ["poetry-core>=1.0.0", "torch", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"