[tool.poetry]
name = "sam2"
version = "0.1.0"
description = "Segment Anything 2 in real-time"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = ">=2.3.1"
torchvision = ">=0.18.1"
numpy = ">=1.24.4"
tqdm = ">=4.66.1"
hydra-core = ">=1.3.2"
iopath = ">=0.1.10"
pillow = ">=9.4.0"

[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"